--- a/index.html
+++ b/index.html
@@ -7,26 +7,42 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
+  <header>
+    <div class="container">
+      <img src="images/logo.svg" alt="">
+    </div>
+  </header>
+  <section class="main">
+    <div class="container">
+      <div class="row">
+        <article class="mockup">
+          <img src="images/illustration-mockups.svg" alt="">
+        </article>
+        <article class="info">
+          <h1>Build The Community <br/>Your Fans Will Love</h1>
+  
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+            Create connections with your users as you engage in genuine discussion.</p> 
+        
+          <a href="#">Register</a>
+        </article>
+      </div>
+    </div>
+  </section>
   <footer>
+    <div class="social">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Daniel Cornelio</a>.
     </p>
   </footer>
 </body>
