--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <script src="https://kit.fontawesome.com/79d7e823c9.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -36,9 +37,9 @@
   </section>
   <footer>
     <div class="social">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span><i class="fab fa-facebook-f"></i></span>
+      <span><i class="fab fa-twitter"></i></span>
+      <span><i class="fab fa-instagram"></i></span>
     </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
