adding media queries

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
   <header>
     <div class="container">
-      <img src="images/logo.svg" alt="">
+      <img class="logo" src="images/logo.svg" alt="">
     </div>
   </header>
+
   <section class="main">
     <div class="container">
       <div class="row">
@@ -35,12 +36,14 @@
       </div>
     </div>
   </section>
-  <footer>
+  <div class="container">
     <div class="social">
-      <span><i class="fab fa-facebook-f"></i></span>
-      <span><i class="fab fa-twitter"></i></span>
-      <span><i class="fab fa-instagram"></i></span>
+      <a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
+      <a href="#"><span><i class="fab fa-twitter"></i></span></a>
+      <a href="#"><span><i class="fab fa-instagram"></i></span></a>
     </div>
+  </div>
+  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Daniel Cornelio</a>.
