--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="container">
-      <img class="logo" src="images/logo.svg" alt="">
+      <a href="#"><img class="logo" src="images/logo.svg" alt="logo"></a>
     </div>
   </header>
 
